Fix timeout issues and count all whitespace as one keystroke.

--- a/client/src/styles/_app.scss
+++ b/client/src/styles/_app.scss
@@ -1,6 +1,7 @@
 .content {
     margin: auto;
-    width: 75%;
     font-family: 'EB Garamond', serif;
     font-size: 1.5em;
+    max-width: 40em;
+    width: 75%;
 }
